@@ -52,13 +52,14 @@
                         <!--<img src="http://7xogkj.com2.z0.glb.qiniucdn.com/group6%403x.png?imageMogr2/thumbnail/80/format/jpg/crop/x100"/>-->
                         <img src="http://7xogkj.com2.z0.glb.qiniucdn.com/group6%403x.png" width="80px" height="60px"/>
                     </div>
-                    <div class="active-bar"></div>
+                    <div class="active-bar" hidden="hidden"></div>
                 </div>
                 <div class="child-zone">
                     <div class="child-icon">
                         <!-- 注意这里的样式是 七牛切图后的图片-->
                         <!--<img src="http://7xogkj.com2.z0.glb.qiniucdn.com/group6Copy%403x.png?imageMogr2/thumbnail/80/format/jpg/crop/x100"/>-->
-                        <img class="" src="http://7xogkj.com2.z0.glb.qiniucdn.com/group6Copy%403x.png"  width="80px" height="60px"/>
+                        <img class="" src="http://7xogkj.com2.z0.glb.qiniucdn.com/group6Copy%403x.png" width="80px"
+                             height="60px"/>
                     </div>
                 </div>
             </div>
